--- a/2024/PHP/exPHP/style.css
+++ b/2024/PHP/exPHP/style.css
@@ -71,5 +71,30 @@
   }
 
   h2{
-    margin-bottom: 16px;
+    margin-bottom: 10px;
+    margin-top: 15px;
+  }
+  h3{
+    margin-bottom: 10px ;
+  }
+
+  .no_exists{
+    color: red;
+  }
+
+  .linha{
+    font-size: 1.2rem;
+  }
+
+  .voltar{
+    background-color: rgb(62, 62, 62);
+    text-decoration: none;
+    color: white;
+    border-radius: 16px;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 10px;
+    position: absolute;
+    left: 10px;
+    top: 10px;
   }
